onboarding & into bugs

--- a/src/Nowruz/modules/Auth/containers/onboarding/Causes/causes.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Causes/causes.module.scss
@@ -9,6 +9,7 @@
     line-height: 28px;
     letter-spacing: 0em;
     text-align: center;
+    color: $color-grey-900;
   }
   .description {
     color: $color-grey-600;
