--- a/src/Nowruz/modules/Auth/containers/onboarding/OpWelcome/welcome.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OpWelcome/welcome.module.scss
@@ -7,11 +7,12 @@
 }
 
 .title {
-  font-size: 30px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 600;
   line-height: 38px;
   margin-bottom: 24px;
+  color: $color-grey-900;
 }
 .description {
   color: $color-grey-600;
