--- a/src/Nowruz/modules/Auth/containers/onboarding/Welcome/welcome.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Welcome/welcome.module.scss
@@ -12,6 +12,7 @@
   font-weight: 600;
   line-height: 38px;
   margin-bottom: 24px;
+  color: $color-grey-900;
 }
 .description {
   color: $color-grey-600;
