--- a/src/Nowruz/pages/Intro/intro.module.scss
+++ b/src/Nowruz/pages/Intro/intro.module.scss
@@ -19,17 +19,19 @@
 }
 
 .copy {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  color: $color-grey-600;
   width: 100%;
   padding-left: 32px;
   margin-bottom: 32px;
   @media screen and (max-width: 600px) {
     display: none;
   }
+}
+.copyText {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: $color-grey-600;
 }
 .review {
   background-color: $color-primary-50;
