--- a/src/Nowruz/modules/Auth/containers/onboarding/CreateOrganization/create-organization.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/CreateOrganization/create-organization.module.scss
@@ -25,3 +25,9 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    border-top: 1px solid $color-grey-200;
+  }
+}
