--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
@@ -26,3 +26,10 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    border-top: 1px solid $color-grey-200;
+  }
+}
+
