--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationType/organization-type.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationType/organization-type.module.scss
@@ -26,3 +26,9 @@
     margin-bottom: 44px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    border-top: 1px solid $color-grey-200;
+  }
+}
