--- a/src/Nowruz/modules/Auth/containers/onboarding/Skills/skills.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Skills/skills.module.scss
@@ -20,3 +20,9 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    border-top: 1px solid $color-grey-200;
+  }
+}
