--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -1,7 +1,7 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  height: 360px;
+  width: 100%;
   position: relative;
   margin-bottom: 48px;
 }
@@ -10,8 +10,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 240px;
-  z-index: -1;
+  z-index: -2;
   //   background-image: linear-gradient(#ace0f9, #fff1eb);
 }
 
@@ -41,6 +40,7 @@
   display: flex;
   padding: 0 24px 0 24px;
   gap: 24px;
+  z-index: -1;
 }
 
 .username {
@@ -63,9 +63,9 @@
   color: $color-grey-600;
 }
 .editBtn {
+  position: absolute;
+  top: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 0;
-  margin-left: auto;
 }
