added layout functionalities

--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -1,3 +1,4 @@
+
 @import 'src/components/_primitives.scss';
 .default {
   text-align: center;
@@ -25,6 +26,8 @@
       background-color: $color-primary-200;
       color: $color-white;
     }
+  }
+  &:global(.MuiButton-containedPrimary) {
     &:focus {
       background-color: $color-primary-700;
       color: $color-white;
@@ -53,3 +56,4 @@
 .button {
   background-color: black;
 }
+
