--- a/src/Nowruz/pages/AllowNotification/allow-notification.module.scss
+++ b/src/Nowruz/pages/AllowNotification/allow-notification.module.scss
@@ -31,3 +31,18 @@
   text-align: center;
   margin-bottom: 44px;
 }
+
+.title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  color: $color-grey-900;
+}
+.subTitle {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: $color-grey-600;
+}
