--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
@@ -1,11 +1,8 @@
 @import 'src/components/_primitives.scss';
 .container {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
+  @media screen and (max-width: 600px) {
+    padding-bottom: 120px;
+  }
 }
 .header {
   margin-bottom: 44px;
@@ -29,7 +26,7 @@
 
 @media screen and (max-width: 600px) {
   .footer {
+    background-color: white;
     border-top: 1px solid $color-grey-200;
   }
 }
-
