--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationType/organization-type.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationType/organization-type.module.scss
@@ -31,5 +31,6 @@
 @media screen and (max-width: 600px) {
   .footer {
     border-top: 1px solid $color-grey-200;
+    background-color: white;
   }
 }
