--- a/src/Nowruz/modules/Auth/containers/onboarding/Stepper/stepper.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Stepper/stepper.module.scss
@@ -3,7 +3,9 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    margin-bottom: 12px;
+    margin: 0;
+    background-color: white;
+    height: 60px;
   }
   margin: 12px 0;
 }
