--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -39,6 +39,7 @@
       opacity: 1;
     }
   }
+
   fieldset {
     border-radius: 8px;
     box-shadow: 0px 1px 2px 0px #1018280d;
@@ -100,3 +101,17 @@
   line-height: 20px;
   letter-spacing: 0;
 }
+.hintMsg {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: $color-grey-600;
+}
+
+// .iconBtn {
+//   border-radius: 8px;
+// }
+// .iconBtn:focus-visible {
+//   border: solid 1px $color-grey-500;
+// }
