--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -1,4 +1,3 @@
-
 @import 'src/components/_primitives.scss';
 .default {
   text-align: center;
@@ -31,6 +30,9 @@
     &:focus {
       background-color: $color-primary-700;
       color: $color-white;
+      box-shadow:
+        0px 0px 0px 4px rgba(51, 110, 107, 0.24),
+        0px 1px 2px 0px rgba(16, 24, 40, 0.05);
     }
   }
 }
@@ -56,4 +58,3 @@
 .button {
   background-color: black;
 }
-
