--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -47,6 +47,7 @@
 $color-primary-50: #f3f6f6;
 $color-primary-100: #e6eded;
 $color-primary-200: #ccdbda;
+$color-primary-300: #99b7b5;
 $color-primary-600: #004a46;
 $color-primary-700: #003b38;
 $color-primary-800: #002c2a;
