--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -61,6 +61,7 @@ $color-grey-300: #d0d5dd;
 $color-grey-500: #667085;
 $color-grey-600: #475467;
 $color-grey-700: #344054;
+$color-grey-800: #1d2939;
 $color-grey-900: #101828;
 
 $color-grey-blue-50: #d5d9eb;
