google login for sign-up

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -17,6 +17,7 @@
   color_grey_500: $color-grey-500;
   color_grey_600: $color-grey-600;
   color_grey_700: $color-grey-700;
+  color_grey_800: $color-grey-800;
   color_grey_900: $color-grey-900;
 
   color_grey_blue_50: $color-grey-blue-50;
