--- a/src/Nowruz/modules/general/components/link/link.module.scss
+++ b/src/Nowruz/modules/general/components/link/link.module.scss
@@ -7,7 +7,7 @@
   line-height: 20px;
   text-decoration: none;
 }
-.link:focus,
-.link:hover {
-  text-decoration: underline;
+.link:focus {
+  outline: 5px auto Highlight;
+  outline: 5px auto -webkit-focus-ring-color;
 }
