fix: icons display changed

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -33,6 +33,7 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: block;
 }
 
 .icon-alert-hexagon:before {
