--- a/src/Nowruz/modules/general/components/checkbox/checkbox.module.scss
+++ b/src/Nowruz/modules/general/components/checkbox/checkbox.module.scss
@@ -15,8 +15,6 @@
 }
 
 .icon {
-  width: 1rem;
-  height: 1rem;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -26,25 +24,42 @@
 .iconNotChecked {
   border-color: $color_grey_300;
 }
-.checkboxContainer:hover .iconNotChecked {
-  background-color: $color-primary-100;
-  border-color: $color-primary-600;
-}
-
-.checkboxContainer:focus-within .iconNotChecked {
-  background-color: $color-white;
-  border-color: $color-primary-300;
-  box-shadow: 0px 0px 0px 4px #e6eded;
-}
-
 .iconChecked {
   border-color: $color_grey_600;
   background-color: $color-primary-50;
 }
+
+.circleIconNotChecked {
+  border: 1px solid $color-grey-300;
+  background-color: $color-white;
+}
+
+.circleIconChecked {
+  border: 1px solid $color-primary-600;
+  background-color: $color-primary-600;
+}
+
 .checkboxContainer:hover .iconChecked {
   background-color: $color-primary-100;
 }
 .checkboxContainer:focus-within .iconChecked {
   background-color: $color-primary-50;
-  box-shadow: 0px 0px 0px 4px #e6eded;
+  box-shadow: 0px 0px 0px 4px $color-primary-100;
+}
+
+.checkboxContainer:hover .iconNotChecked,
+.checkboxContainer:hover .circleIconNotChecked {
+  background-color: $color-primary-100;
+  border-color: $color-primary-600;
+}
+
+.checkboxContainer:focus-within .iconNotChecked,
+.checkboxContainer:focus-within .circleIconNotChecked {
+  background-color: $color-white;
+  border-color: $color-primary-300;
+  box-shadow: 0px 0px 0px 4px $color-primary-100;
+}
+
+.checkboxContainer:focus-within .circleIconChecked {
+  box-shadow: 0px 0px 0px 4px $color-primary-100;
 }
