--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -70,3 +70,17 @@
   justify-content: center;
   gap: 12px;
 }
+.iconBtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  border: solid 1px $color-grey-300;
+}
+
+.actionDiv {
+  margin-right: 0;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
