modify checkbox component

--- a/src/Nowruz/modules/general/components/cardRadioButton/cardRadioButton.module.scss
+++ b/src/Nowruz/modules/general/components/cardRadioButton/cardRadioButton.module.scss
@@ -63,7 +63,9 @@
   justify-content: center;
 }
 .rbContainer {
-  width: 1rem;
+  padding: 0;
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .title {
