--- a/src/Nowruz/modules/Search/components/SearchInput/search-input.module.scss
+++ b/src/Nowruz/modules/Search/components/SearchInput/search-input.module.scss
@@ -18,6 +18,7 @@
   font-weight: 400;
   line-height: 24px;
   color: $color-grey-900;
+  width: 100%;
 }
 .input::placeholder {
   font-size: 16px;
