--- a/src/Nowruz/modules/Auth/containers/onboarding/Welcome/welcome.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Welcome/welcome.module.scss
@@ -4,6 +4,7 @@
   color: $color-grey-600;
   margin-bottom: 48px;
   margin-top: 32px;
+  text-align: center;
 }
 
 .title {
@@ -13,6 +14,7 @@
   line-height: 38px;
   margin-bottom: 24px;
   color: $color-grey-900;
+  text-align: center;
 }
 .description {
   color: $color-grey-600;
