--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -40,6 +40,13 @@
 
 @font-face {
   font-family: Inter;
+  font-weight: 500;
+  src: url('/fonts/Inter-Medium.woff2');
+}
+
+
+@font-face {
+  font-family: Inter;
   font-weight: 600;
   src: url('/fonts/Inter-SemiBold.woff2');
 }
