--- a/src/components/_reset.scss
+++ b/src/components/_reset.scss
@@ -18,14 +18,21 @@
 *::after {
   box-sizing: border-box;
   font-family:
-    'Inter',
+    Inter,
+    ui-sans-serif,
+    system-ui,
     -apple-system,
     BlinkMacSystemFont,
     'Segoe UI',
     Roboto,
     'Helvetica Neue',
     Arial,
-    sans-serif;
+    'Noto Sans',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
   // color: var(--color-black-01);
 }
 div,
