--- a/src/Nowruz/modules/Search/components/UserCard/user-card.module.scss
+++ b/src/Nowruz/modules/Search/components/UserCard/user-card.module.scss
@@ -3,7 +3,7 @@
 .gradient {
   background: linear-gradient(to bottom, #a5c0ee 0%, #fbc5ec 100%);
   width: 100%;
-  height: 112px;
+  min-height: 112px;
 }
 .title {
   font-size: 16px;
@@ -25,4 +25,12 @@
   font-weight: 400;
   line-height: 20px;
   margin-bottom: 16px;
+  margin-top: 16px;
+}
+.avatar {
+  position: absolute;
+  top: 76px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: calc(50% - 36px);
 }
