fix switch account issue for onboarding

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,7 +41,7 @@ body {
 
 //shared container for all sign up pages
 .form-container {
-  max-width: 360px;
+  width: 360px;
   margin: auto;
 
   @media (max-width: 640px) {
