--- a/src/Nowruz/modules/general/components/Chip/chip.module.scss
+++ b/src/Nowruz/modules/general/components/Chip/chip.module.scss
@@ -1,42 +1,46 @@
+@import 'src/components/_primitives.scss';
+
 .chip {
   display: inline-flex;
   align-items: center;
-  padding: 2px 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 2px 0px;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
 }
 
-.icon {
-  cursor: pointer;
-  padding: 8px;
-  margin: 0 4px;
-  background-color: #eee;
-  border-radius: 4px;
-
-  &:hover {
-    background-color: #ddd;
-  }
+.startIcon {
+  margin-right: 4px;
 }
-
+.endIcon {
+  margin-left: 4px;
+}
 .content {
   flex: 1;
-  padding: 0 8px;
 }
 
-.primary {
-  background-color: #007bff;
-  color: #fff;
-  border: 1px solid #0056b3;
+.primary-theme {
+  background-color: $color-primary-50;
+  color: $color-primary-700;
+  border: 1px solid $color-primary-200;
 }
 
-.secondary {
-  background-color: #6c757d;
-  color: #fff;
-  border: 1px solid #545b62;
+.secondary-theme {
+  background-color: $color-white;
+  color: $color-grey-700;
+  border: 1px solid $color-grey-300;
+  box-shadow: 0px 1px 2px 0px rgba(14, 24, 41, 0.05);
 }
 
-.success {
-  background-color: #28a745;
-  color: #fff;
-  border: 1px solid #218838;
+.round {
+  border-radius: 16px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+
+.sharp {
+  border-radius: 6px;
+  padding-right: 6px;
+  padding-left: 6px;
 }
