--- a/src/Nowruz/modules/Search/containers/SearchModal/search-modal.module.scss
+++ b/src/Nowruz/modules/Search/containers/SearchModal/search-modal.module.scss
@@ -13,6 +13,17 @@
     border-radius: 0;
   }
 }
+.mobileHeader {
+  padding: 20px 16px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 28px;
+  @media screen and (min-width: 600px) {
+    display: none;
+  }
+}
 .tabsRow {
   padding: 10px;
   border-bottom: 1px solid $color-grey-200;
@@ -36,8 +47,9 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+  justify-content: center;
   flex: 1;
-  padding: 8px 16px;
+  padding: 10px;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -46,15 +58,26 @@
     display: none;
   }
 }
+.footerSelecteItem {
+  width: calc(50% + 1px);
+  border-right: 1px solid $color-grey-200;
+}
+// .footerButton {
+//   display: inline-block;
+//   padding: 6px;
+//   border: 1px solid $color-grey-200;
+//   border-radius: 8px;
+//   font-size: 14px;
+//   font-style: normal;
+//   font-weight: 600;
+//   line-height: 20px;
+//   color: $color-grey-500;
+// }
 
-.footerButton {
-  display: inline-block;
-  padding: 6px;
-  border: 1px solid $color-grey-200;
-  border-radius: 8px;
-  font-size: 14px;
-  font-style: normal;
+.showResults {
+  font-size: 16px;
   font-weight: 600;
-  line-height: 20px;
-  color: $color-grey-500;
+  line-height: 24px;
+  color: $color-primary-700;
+  cursor: pointer;
 }
