--- a/src/Nowruz/modules/general/components/avatar/avatar.module.scss
+++ b/src/Nowruz/modules/general/components/avatar/avatar.module.scss
@@ -11,6 +11,9 @@
   background-color: white;
   background-color: $color-grey-100;
 }
+.avatarBorder {
+  border: 3px solid $color-white;
+}
 .imageContainer {
   width: 3rem;
   height: 3rem;
@@ -39,4 +42,13 @@
   justify-content: center;
   align-items: center;
   padding: 6px;
+}
+
+.verifiedBadge {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+
 }
