--- a/src/Nowruz/modules/userProfile/components/impact/impact.module.scss
+++ b/src/Nowruz/modules/userProfile/components/impact/impact.module.scss
@@ -34,21 +34,19 @@
 }
 
 .pointNumber {
-  font-family: Inter;
   font-size: 36px;
   font-weight: 700;
   line-height: 44px;
-  letter-spacing: -0.02em;
+  letter-spacing: -2%;
   text-align: left;
+  color: $color-grey-900;
 }
 
 .pointUnit {
-  font-family: Inter;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
+  color: $color-grey-600;
 }
 
 .button {
