--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -3,7 +3,6 @@
 .container {
   width: 100%;
   position: relative;
-  margin-bottom: 48px;
 }
 
 .banner {
@@ -26,10 +25,7 @@
   border-radius: 50%;
   z-index: 10;
   cursor: pointer;
-}
-
-.camera {
-  cursor: pointer;
+  box-shadow: $Shadows-xs;
 }
 
 .avatar {
@@ -38,6 +34,7 @@
   bottom: 0;
   background-color: transparent;
   display: flex;
+  align-items: center;
   padding: 0 24px 0 24px;
   gap: 24px;
 }
@@ -84,4 +81,37 @@
   display: flex;
   align-items: center;
   gap: 12px;
+}
+
+.openToWork {
+  width: 153px;
+  height: 28px;
+  padding: 4px, 10px, 4px, 10px;
+  border: 1px solid $color-grey-300;
+  border-radius: 8px;
+  gap: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.openToWorkText {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
+  color: $color-grey-700;
+}
+
+.avatarMobile {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 24px 0 24px;
+  gap: 24px;
 }
