--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -6,6 +6,7 @@
   color_primary_100: $color-primary-100;
   color_primary_200: $color-primary-200;
   color_primary_300: $color-primary-300;
+  color_primary_500: $color-primary-500;
   color_primary_600: $color-primary-600;
   color_primary_700: $color-primary-700;
 
