--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -27,11 +27,16 @@
     }
   }
   &:global(.MuiButton-containedPrimary) {
-    &:focus {
+    &:hover {
       background-color: $color-primary-700;
       color: $color-white;
+      box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+    }
+    &:focus {
+      background-color: $color-primary-600;
+      color: $color-white;
       box-shadow:
-        0px 0px 0px 4px rgba(51, 110, 107, 0.24),
+        0px 0px 0px 4px rgba(230, 237, 237, 1),
         0px 1px 2px 0px rgba(16, 24, 40, 0.05);
     }
   }
@@ -45,7 +50,7 @@
     }
     &:focus {
       box-shadow:
-        0px 0px 0px 4px rgba(51, 110, 107, 0.24),
+        0px 0px 0px 4px rgba(242, 244, 247, 1),
         0px 1px 2px 0px rgba(16, 24, 40, 0.05);
     }
   }
