fix some issues of sign-up

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -6,6 +6,7 @@
   color_primary_100: $color-primary-100;
   color_primary_200: $color-primary-200;
   color_primary_300: $color-primary-300;
+  color_primary_500: $color-primary-500;
   color_primary_600: $color-primary-600;
   color_primary_700: $color-primary-700;
 
@@ -24,6 +25,7 @@
 
   color_grey_blue_50: $color-grey-blue-50;
   color_grey_blue_200: $color-grey-blue-200;
+  color_grey_blue_500: $color-grey-blue-500;
   color_grey_blue_700: $color-grey-blue-700;
 
   color_error_200: $color-error-200;
