--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -44,7 +44,6 @@
   src: url('/fonts/Inter-Medium.woff2');
 }
 
-
 @font-face {
   font-family: Inter;
   font-weight: 600;
@@ -56,6 +55,7 @@ $color-primary-50: #f3f6f6;
 $color-primary-100: #e6eded;
 $color-primary-200: #ccdbda;
 $color-primary-300: #99b7b5;
+$color-primary-500: #336e6b;
 $color-primary-600: #004a46;
 $color-primary-700: #003b38;
 $color-primary-800: #002c2a;
@@ -75,6 +75,7 @@ $color-grey-900: #101828;
 
 $color-grey-blue-50: #f8f9fc;
 $color-grey-blue-200: #d5d9eb;
+$color-grey-blue-500: #4e5ba6;
 $color-grey-blue-700: #363f72;
 
 $color-error-100: #fee4e2;
