--- a/src/Nowruz/modules/Jobs/jobCreate/components/Header/header.module.scss
+++ b/src/Nowruz/modules/Jobs/jobCreate/components/Header/header.module.scss
@@ -18,6 +18,9 @@
   .titleButtons {
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 600px) {
+      flex-direction: column;
+    }
   }
   //FIX: diffrent size for backlink
   .back {
