--- a/src/Nowruz/modules/general/components/RadioGroup/radio-group.module.scss
+++ b/src/Nowruz/modules/general/components/RadioGroup/radio-group.module.scss
@@ -5,3 +5,15 @@
   line-height: 24px;
   color: $color-grey-700;
 }
+.msg {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 6px;
+}
+
+.errorMsg {
+  color: $color-error-500;
+}
