--- a/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
+++ b/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
@@ -22,8 +22,13 @@
   flex-direction: row-reverse;
   align-items: center;
   padding: 8px;
+  border-radius: 6px;
 }
 .option:hover {
+  background-color: $color-grey-50;
+}
+
+.selecetdOption {
   background-color: $color-grey-50;
 }
 
@@ -57,4 +62,12 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+.input {
+  border-radius: 8px;
+  display: flex;
+  gap: 8px;
+  height: 44px;
+  display: flex;
+  align-items: center;
 }
