--- a/src/Nowruz/modules/Jobs/jobCreate/containers/JobCreateForm/job-create-form.module.scss
+++ b/src/Nowruz/modules/Jobs/jobCreate/containers/JobCreateForm/job-create-form.module.scss
@@ -40,7 +40,7 @@
 }
 .priceInputs {
   @media screen and (min-width: 600px) {
-    // max-width: 240px;
+    width: 240px;
     // max-width: 155px;
   }
 }
@@ -49,4 +49,8 @@
   justify-content: flex-end;
   padding-top: 16px;
   padding-bottom: 64px;
+}
+.back {
+  max-width: 82px;
+  margin-bottom: 20px;
 }
