--- a/src/components/_reset.scss
+++ b/src/components/_reset.scss
@@ -20,7 +20,10 @@
   font-family: 'Inter';
   color: var(--color-black-01);
 }
-
+div,
+label {
+  color: var(--color-black-01);
+}
 /* Reapply the pointer cursor for anchor tags */
 a,
 button {
