--- a/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
+++ b/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
@@ -59,7 +59,7 @@
 .description {
   margin-left: 8px;
   font-size: 16px;
-  font-style: normal;
+  color: $color-grey-600;
   font-weight: 400;
   line-height: 24px;
 }
