--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationCauses/causes.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationCauses/causes.module.scss
@@ -24,5 +24,6 @@
 @media screen and (max-width: 600px) {
   .footer {
     border-top: 1px solid $color-grey-200;
+    background-color: white;
   }
 }
