edit header image

--- a/src/Nowruz/modules/userProfile/containers/editImage/editImage.module.scss
+++ b/src/Nowruz/modules/userProfile/containers/editImage/editImage.module.scss
@@ -24,3 +24,13 @@
     margin-bottom: 0;
   }
 }
+
+.errorMsg {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 6px;
+  color: $color-error-500;
+}
