--- a/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
+++ b/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
@@ -45,3 +45,11 @@
   outline: 5px auto -webkit-focus-ring-color;
   background-color: white;
 }
+
+.createLabel {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0em;
+  color: $color-primary-700;
+}
