--- a/src/Nowruz/modules/layout/components/notifBellIcon/notifBellIcon.module.scss
+++ b/src/Nowruz/modules/layout/components/notifBellIcon/notifBellIcon.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 6px;
+  cursor: pointer;
 }
 
 .container .dot {
@@ -25,7 +26,7 @@
   -ms-transition: background-color 200ms linear;
   transition: background-color 200ms linear;
 }
-.container:hover .dot {
-  opacity: 0;
-  transition: 200ms all ease;
-}
+// .container:hover .dot {
+//   opacity: 0;
+//   transition: 200ms all ease;
+// }
