select items by keyboard in icon drop-down component

--- a/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
+++ b/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
@@ -36,6 +36,8 @@
 .menuItem {
   padding: 0;
   background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 .menuItem:hover {
   background-color: $color-grey-50;
