--- a/src/Nowruz/modules/general/components/cardRadioButton/cardRadioButton.module.scss
+++ b/src/Nowruz/modules/general/components/cardRadioButton/cardRadioButton.module.scss
@@ -11,14 +11,17 @@
 }
 
 .normalContainer {
-  border: solid 1px $color-grey-200;
+  border: solid 1px transparent;
+  box-shadow: 0px 0px 0px 1px$color-grey-200;
 }
 .normalContainer:hover {
-  border: solid 1px $color-primary-200;
+  border: solid 1px transparent;
+  box-shadow: 0px 0px 0px 1px$color-primary-200;
 }
 .selectedContainer {
-  border: solid 2px $color-primary-600;
+  border: solid 1px $color-primary-600;
   background-color: $color-primary-50;
+  box-shadow: 0px 0px 0px 1px$color-primary-600;
 }
 .content {
   display: flex;
