--- a/src/Nowruz/modules/Jobs/containers/OrgOfferModal/org-offer-modal.module.scss
+++ b/src/Nowruz/modules/Jobs/containers/OrgOfferModal/org-offer-modal.module.scss
@@ -15,21 +15,29 @@
     overflow: auto;
     height: 100%;
     padding: 0 16px;
-    padding-bottom: 200px;
+    padding-bottom: 240px;
   }
 }
 .header {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   padding: 24px;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 28px;
-  color: $color-grey-900;
   border-bottom: 1px solid $color-grey-200;
+  .title {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    color: $color-grey-900;
+  }
+  .subtitle {
+    font-size: 14px;
+    line-height: 20px;
+    color: $color-grey-600;
+  }
 }
 .content {
   background-color: white;
@@ -44,27 +52,30 @@
 }
 
 .row {
-  padding: 20px 24px;
+  padding: 20px 0;
+  margin: 0 24px;
   border-bottom: 1px solid $color-grey-200;
   display: flex;
   flex-direction: column;
   @media screen and (max-width: 600px) {
-    padding: 20px 16px;
+    padding: 20px 0;
+    margin: 0 16px;
     justify-content: space-between;
     flex-direction: column;
   }
 }
-.time {
-  padding: 20px 24px;
-  border-bottom: 1px solid $color-grey-200;
-  display: flex;
-  gap: 20px;
-  @media screen and (max-width: 600px) {
-    padding: 20px 16px;
-    // justify-content: space-between;
-    flex-direction: column;
-  }
-}
+// maybe needed after  calender added
+// .time {
+//   padding: 20px 24px;
+//   border-bottom: 1px solid $color-grey-200;
+//   display: flex;
+//   gap: 20px;
+//   @media screen and (max-width: 600px) {
+//     padding: 20px 16px;
+//     // justify-content: space-between;
+//     flex-direction: column;
+//   }
+// }
 .title {
   font-size: 16px;
   font-weight: 600;
@@ -81,6 +92,7 @@
   display: flex;
   gap: 12px;
   padding: 24px;
+  border-top: 1px solid $color-grey-200;
   @media screen and (max-width: 600px) {
     position: fixed;
     width: 100%;
