--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -38,6 +38,7 @@
       color: $color-grey-500;
       opacity: 1;
     }
+    flex: 8;
   }
 
   fieldset {
@@ -116,4 +117,7 @@
 .iconBtn:focus {
   outline: 5px auto Highlight;
   outline: 5px auto -webkit-focus-ring-color;
+}
+.prefixDropdown {
+  // width: 150px;
 }
