--- a/src/Nowruz/modules/Search/components/UserCard/user-card.module.scss
+++ b/src/Nowruz/modules/Search/components/UserCard/user-card.module.scss
@@ -1,7 +1,15 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  border-left: 1px solid $color-grey-200;;
+  border-left: 1px solid $color-grey-200;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  text-align: center;
+  position: relative;
+  padding-bottom: 6px;
 }
 .gradient {
   background: linear-gradient(to bottom, #a5c0ee 0%, #fbc5ec 100%);
@@ -20,15 +28,13 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
-  letter-spacing: 0em;
   margin-bottom: 16px;
 }
 .bio {
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
-  margin-bottom: 16px;
-  margin-top: 16px;
+  margin: 16px;
 }
 .avatar {
   position: absolute;
