--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -83,7 +83,7 @@
   gap: 12px;
 }
 
-.openToWork {
+.status {
   width: 153px;
   height: 28px;
   padding: 4px, 10px, 4px, 10px;
@@ -95,7 +95,7 @@
   justify-content: center;
 }
 
-.openToWorkText {
+.statusText {
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
