--- a/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
+++ b/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
@@ -18,7 +18,7 @@
 .menuList {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: absolute !important;
   top: 48px;
   width: 280px;
   max-height: 384px;
