Revert "Mock redux store for story book"
This reverts commit fb8d49f9e251038eb29fbe5840a1ba96d4488f77.

--- a/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
+++ b/src/Nowruz/modules/general/components/iconDropDown/iconDropDown.module.scss
@@ -18,7 +18,7 @@
 .menuList {
   display: flex;
   flex-direction: column;
-  position: absolute !important;
+  position: absolute;
   top: 48px;
   width: 280px;
   max-height: 384px;
