--- a/src/Nowruz/modules/Jobs/jobCreate/components/Header/header.module.scss
+++ b/src/Nowruz/modules/Jobs/jobCreate/components/Header/header.module.scss
@@ -9,11 +9,13 @@
     font-size: 30px;
     font-weight: 600;
     line-height: 38px;
+    color: $color-grey-900;
   }
   .description {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
+    color: $color-grey-600;
   }
   .titleButtons {
     display: flex;
