--- a/src/Nowruz/modules/Jobs/jobCreate/components/JobInfoCard/job-info.module.scss
+++ b/src/Nowruz/modules/Jobs/jobCreate/components/JobInfoCard/job-info.module.scss
@@ -12,6 +12,12 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  flex-wrap: wrap;
   .item {
     display: flex;
     margin-bottom: 16px;
