--- a/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
@@ -38,7 +38,12 @@
     display: flex;
     margin-left: 24px;
     margin-bottom: 24px;
-    overflow-x: auto;
+    display: flex;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 8px;
+    align-self: stretch;
+    flex-wrap: wrap;
     @media (max-width: 640px) {
       margin-left: 20px;
       margin-bottom: 20px;
@@ -60,6 +65,11 @@
     color: $color-grey-600;
     margin-left: 24px;
     margin-bottom: 24px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    text-overflow: ellipsis;
     @media (max-width: 640px) {
       margin-left: 20px;
       margin-bottom: 20px;
@@ -77,6 +87,16 @@
     gap: 12px 16px;
     align-self: stretch;
     flex-wrap: wrap;
+  }
+  .features {
+    display: flex;
+    color: $color-grey-700;
+    .featureSubtitle {
+      margin-left: 6px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+    }
   }
   .footer {
     display: flex;
