focus on chips by tab and select them by enter

--- a/src/Nowruz/modules/general/components/multiSelect/multiSelect.module.scss
+++ b/src/Nowruz/modules/general/components/multiSelect/multiSelect.module.scss
@@ -19,6 +19,10 @@
   cursor: pointer;
 }
 
+.chip:focus {
+  box-shadow: $Focus-rings-gray;
+}
+
 .chipLabel {
   color: $color-primary-700;
   font-size: 14px;
