--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -100,6 +100,19 @@ $Focus-rings-brand-shadow-sm:
   0px 0px 0px 4px rgba(51, 110, 107, 0.24),
   0px 1px 2px 0px rgba(16, 24, 40, 0.06),
   0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+$Focus-rings-gray: 0px 0px 0px 4px rgba(152, 162, 179, 0.14);
+$Focus-rings-gray-shadow-xs:
+  0px 0px 0px 4px rgba(152, 162, 179, 0.14),
+  0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+$Focus-rings-gray-shadow-sm:
+  0px 0px 0px 4px rgba(152, 162, 179, 0.14),
+  0px 1px 2px 0px rgba(16, 24, 40, 0.06),
+  0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+$Focus-rings-gray-secondary: 0px 0px 0px 4px rgba(152, 162, 179, 0.2);
+$Focus-rings-error: 0px 0px 0px 4px rgba(240, 68, 56, 0.24);
+$Focus-rings-error-shadow-xs:
+  0px 0px 0px 4px rgba(240, 68, 56, 0.24),
+  0px 1px 2px 0px rgba(16, 24, 40, 0.05);
 $Shadows-xs: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
 $Shadows-sm:
   0px 1px 2px 0px rgba(16, 24, 40, 0.06),
