fix reported bugs on job listing

--- a/src/Nowruz/modules/general/components/Chip/chip.module.scss
+++ b/src/Nowruz/modules/general/components/Chip/chip.module.scss
@@ -1,52 +1,66 @@
 @import 'src/components/_primitives.scss';
 
-.chip {
-  display: inline-flex;
+.chip-sm {
+  height: 22px;
+  padding: 2px 8px;
+  display: flex;
   align-items: center;
-  padding: 2px 0px;
+  justify-content: center;
+  gap: 4px;
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
   line-height: 18px;
-  white-space: nowrap;
+  letter-spacing: 0em;
 }
 
-.startIcon {
-  margin-right: 4px;
+.chip-md {
+  height: 24px;
+  padding: 2px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
 }
-.endIcon {
-  margin-left: 4px;
-}
-.content {
-  flex: 1;
+
+.chip-lg {
+  height: 28px;
+  padding: 4px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
 }
 
 .primary-theme {
   background-color: $color-primary-50;
   color: $color-primary-700 !important;
-  border: 1px solid $color-primary-200;
+  border: 1.5px solid $color-primary-200;
 }
 
 .secondary-theme {
   background-color: $color-white;
   color: $color-grey-700;
-  border: 1px solid $color-grey-300;
+  border: 1.5px solid $color-grey-300;
   box-shadow: 0px 1px 2px 0px rgba(14, 24, 41, 0.05);
 }
 .grey_blue-theme {
   background-color: $color-grey-blue-50;
   color: $color-grey-blue-700;
-  border: 1px solid $color-grey-blue-200;
+  border: 1.5px solid $color-grey-blue-200;
   box-shadow: 0px 1px 2px 0px rgba(14, 24, 41, 0.05);
 }
 .round {
   border-radius: 16px;
-  padding-right: 8px;
-  padding-left: 8px;
 }
 
 .sharp {
   border-radius: 6px;
-  padding-right: 6px;
-  padding-left: 6px;
 }
