--- a/src/Nowruz/modules/general/components/Accordion/accordion.module.scss
+++ b/src/Nowruz/modules/general/components/Accordion/accordion.module.scss
@@ -18,13 +18,13 @@
       display: inline-flex;
       flex: 0 0 auto;
       flex-direction: column;
-      padding: var(--3-spacing-spacing-xxs) 0px 0px 0px;
+      padding: var(--3-spacing-spacing-xxs) 0 0 0;
       position: relative;
 
       .instance_node {
-        height: 24px !important;
+        height: 1.5rem !important;
         position: relative !important;
-        width: 24px !important;
+        width: 1.rem !important;
       }
     }
 
@@ -53,30 +53,16 @@
     }
   }
 
-  &.mobile {
-    width: 343px;
-  }
-
-  &.desktop {
-    width: 768px;
-  }
-
   &.divider_true {
     border-color: $color-grey-200;
     border-top-style: solid;
     border-top-width: 1px;
-    padding-top: 24px;
+    padding-top: 1.5rem;
   }
 
-  .breakpoint_desktop {
-    gap: 24px;
-  }
-
-  .breakpoint_mobile.right {
-    gap: 24px;
-  }
-
+  .breakpoint_desktop,
+  .breakpoint_mobile.right,
   .breakpoint_mobile.left {
-    gap: 24px;
+    gap: 1.5rem;
   }
 }
