--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -84,9 +84,8 @@
 }
 
 .status {
-  width: 153px;
   height: 28px;
-  padding: 4px, 10px, 4px, 10px;
+  padding: 4px 10px 4px 10px;
   border: 1px solid $color-grey-300;
   border-radius: 8px;
   gap: 6px;
