--- a/src/Nowruz/modules/userProfile/components/mainInfo/mainInfo.module.scss
+++ b/src/Nowruz/modules/userProfile/components/mainInfo/mainInfo.module.scss
@@ -1,16 +1,19 @@
+@import 'src/components/_primitives.scss';
+
 .textMd {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.5rem;
   letter-spacing: 0em;
   text-align: left;
+  color: $color-grey-700;
 }
 
 .textSM {
   font-family: Inter;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 600;
-  line-height: 20px;
+  line-height: 1.25rem;
   letter-spacing: 0em;
   text-align: left;
 }
