Added organization profile in job detail page

--- a/src/Nowruz/modules/Jobs/components/jobDetailDescription/jobDetailDescription.module.scss
+++ b/src/Nowruz/modules/Jobs/components/jobDetailDescription/jobDetailDescription.module.scss
@@ -1,4 +1,12 @@
 @import 'src/components/_primitives.scss';
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  @media (max-width: 640px) {
+    gap: 20px;
+  }
+}
 .title {
   font-size: 18px;
   font-weight: 600;
@@ -6,11 +14,6 @@
   letter-spacing: 0em;
   color: $color-grey-900;
 }
-
-.desc {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0em;
+.container * {
   color: $color-grey-600;
 }
