--- a/src/Nowruz/modules/general/components/expandableText/expandableText.module.scss
+++ b/src/Nowruz/modules/general/components/expandableText/expandableText.module.scss
@@ -1,14 +1,19 @@
-@import 'src/components/_primitives.scss';
-.seeMoreBtn {
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  letter-spacing: 0em;
-  color: $color-primary-700;
-  text-transform: none;
-  cursor: pointer;
-}
-.seeMoreBtn:focus {
-  outline: 5px auto Highlight;
-  outline: 5px auto -webkit-focus-ring-color;
+.expect {
+  word-wrap: break-word;
+
+  :where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+    all: revert;
+  }
+
+  :where(a) {
+    text-decoration: none;
+    color: var(--color-primary-01);
+  }
+
+  &__seeMore {
+    white-space: nowrap;
+    color: var(--color-primary-01);
+    font-weight: 600;
+    cursor: pointer;
+  }
 }
