--- a/src/Nowruz/modules/Jobs/components/jobDetailAbout/jobDetailAbout.module.scss
+++ b/src/Nowruz/modules/Jobs/components/jobDetailAbout/jobDetailAbout.module.scss
@@ -7,6 +7,7 @@
   gap: 24px;
   padding: 24px;
   border: 1px solid $color-grey-200;
+  border-radius: 8px;
   @media (max-width: 640px) {
     gap: 20px;
     border: none;
