--- a/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
+++ b/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
@@ -1,3 +1,5 @@
+@import 'src/components/_primitives.scss';
+
 .container {
   width: 100%;
   padding: 32px 0px 48px 0px;
@@ -19,4 +21,11 @@
     padding: 0px 16px;
     gap: 24px;
   }
+}
+.expandable span {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: $color-grey-600;
 }
