--- a/src/Nowruz/pages/jobs/List/list.module.scss
+++ b/src/Nowruz/pages/jobs/List/list.module.scss
@@ -4,6 +4,7 @@
   padding: 32px;
   padding-bottom: 48px;
   @media (max-width: 640px) {
+    padding: 32px 16px 64px 16px;
   }
   .header {
     padding-bottom: 20px;
