File Uploader component and apply modal

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -128,3 +128,16 @@ $Shadows-xl:
   0px 20px 24px -4px rgba(16, 24, 40, 0.08);
 $Shadows-2xl: 0px 24px 48px -12px rgba(16, 24, 40, 0.18);
 $Shadows-3xl: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
+
+//Nowruz border radius
+$radius-none: 0;
+$radius-xxs: 0.125rem;
+$radius-xs: 0.25rem;
+$radius-sm: 0.375rem;
+$radius-default: 0.5rem;
+$radius-lg: 0.625rem;
+$radius-xl: 0.75rem;
+$radius-2xl: 1rem;
+$radius-3xl: 1.25rem;
+$radius-4xl: 1.5rem;
+$radius-full: 9999px;
