--- a/src/Nowruz/modules/general/components/modal/modal.module.scss
+++ b/src/Nowruz/modules/general/components/modal/modal.module.scss
@@ -3,15 +3,21 @@
   width: 640px;
   margin: auto;
   max-height: 90%;
-  overflow-y: auto;
   display: flex;
   align-items: center;
   justify-content: center;
+
   @media (max-width: 640px) {
     width: 100%;
     max-height: 100%;
     height: 100%;
   }
+}
+
+.header {
+  position: absolute;
+  width: 100%;
+  top: 0;
 }
 
 .title {
