fix wallet connect modal position

--- a/src/components/_reset.scss
+++ b/src/components/_reset.scss
@@ -105,3 +105,11 @@ meter {
 :where([draggable='true']) {
   -webkit-user-drag: element;
 }
+
+w3m-modal {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  z-index: 5;
+  top: 30%;
+}
