apply job for logged in user

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -2,6 +2,7 @@
 @import './primitives';
 
 :export {
+  color_primary_25: $color-primary-25;
   color_primary_50: $color-primary-50;
   color_primary_100: $color-primary-100;
   color_primary_200: $color-primary-200;
@@ -12,6 +13,7 @@
 
   color_white: $color-white;
 
+  color_grey_25: $color-grey-25;
   color_grey_50: $color-grey-50;
   color_grey_100: $color-grey-100;
   color_grey_200: $color-grey-200;
