--- a/src/Nowruz/modules/general/components/modal/modal.module.scss
+++ b/src/Nowruz/modules/general/components/modal/modal.module.scss
@@ -1,16 +1,12 @@
 @import 'src/components/_primitives.scss';
 .container {
-  width: 640px;
-  margin: auto;
-  max-height: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @media (max-width: 640px) {
-    width: 100%;
-    max-height: 100%;
-    height: 100%;
+  @media (min-width: 640px) {
+    width: 640px;
+    margin: auto;
+    max-height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
