--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -51,6 +51,7 @@
 }
 
 //Nowruz Colors
+$color-primary-25: #f9fbfb;
 $color-primary-50: #f3f6f6;
 $color-primary-100: #e6eded;
 $color-primary-200: #ccdbda;
@@ -62,6 +63,7 @@ $color-primary-800: #002c2a;
 
 $color-white: #ffffff;
 
+$color-grey-25: #fcfcfd;
 $color-grey-50: #f9fafb;
 $color-grey-100: #f2f4f7;
 $color-grey-200: #eaecf0;
@@ -90,6 +92,8 @@ $color-success-500: #12b76a;
 $color-success-600: #039855;
 
 $color-sail-100: #fbf7f5;
+
+$color-warning-600: #dc6803;
 
 // Nowruz Box Shadows
 $Focus-rings-brand: 0px 0px 0px 4px rgba(51, 110, 107, 0.24);
