--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -56,6 +56,7 @@
     padding-bottom: 0;
     width: 100%;
     height: 100% !important;
+    overflow-y: auto !important;
     &::placeholder {
       color: $color-grey-500;
       opacity: 1;
