--- a/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
+++ b/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
@@ -15,8 +15,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  flex: 1;
   gap: 32px;
-  padding: 0px 32px;
+  padding: 0px 0px 0px 32px;
   @media (max-width: 640px) {
     padding: 0px 16px;
     gap: 24px;
