--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -78,6 +78,7 @@ $color-grey-900: #101828;
 $color-grey-blue-50: #f8f9fc;
 $color-grey-blue-200: #d5d9eb;
 $color-grey-blue-500: #4e5ba6;
+$color-grey-blue-600: #3e4784;
 $color-grey-blue-700: #363f72;
 
 $color-error-100: #fee4e2;
