--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -28,6 +28,7 @@
   color_grey_blue_50: $color-grey-blue-50;
   color_grey_blue_200: $color-grey-blue-200;
   color_grey_blue_500: $color-grey-blue-500;
+  color_grey_blue_600: $color-grey-blue-600;
   color_grey_blue_700: $color-grey-blue-700;
 
   color_error_200: $color-error-200;
@@ -41,4 +42,6 @@
   color_success_600: $color-success-600;
 
   color_sail_100: $color-sail-100;
+
+  color_warning_600: $color-warning-600;
 }
