--- a/src/Nowruz/modules/general/components/Chip/chip.module.scss
+++ b/src/Nowruz/modules/general/components/Chip/chip.module.scss
@@ -51,6 +51,19 @@
   border: 1.5px solid $color-grey-300;
   box-shadow: 0px 1px 2px 0px rgba(14, 24, 41, 0.05);
 }
+
+.success-theme {
+  background-color: $color-white;
+  color: $color-success-500 !important;
+  border: 1.5px solid $color-success-500;
+}
+
+.error-theme {
+  background-color: $color-white;
+  color: $color-error-500 !important;
+  border: 1.5px solid $color-error-500;
+}
+
 .grey_blue-theme {
   background-color: $color-grey-blue-50;
   color: $color-grey-blue-700;
