user can complete an ongoing job

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -31,6 +31,8 @@
   color_grey_blue_600: $color-grey-blue-600;
   color_grey_blue_700: $color-grey-blue-700;
 
+  color_error_25: $color-error-25;
+  color_error_100: $color-error-100;
   color_error_200: $color-error-200;
   color_error_300: $color-error-300;
   color_error_500: $color-error-500;
@@ -40,8 +42,12 @@
   color_success_100: $color-success-100;
   color_success_500: $color-success-500;
   color_success_600: $color-success-600;
+  color_success_700: $color-success-700;
 
   color_sail_100: $color-sail-100;
 
+  color_warning_25: $color-warning-25;
+  color_warning_300: $color-warning-300;
   color_warning_600: $color-warning-600;
+  color_warning_700: $color-warning-700;
 }
