--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -81,6 +81,7 @@ $color-grey-blue-500: #4e5ba6;
 $color-grey-blue-600: #3e4784;
 $color-grey-blue-700: #363f72;
 
+$color-error-25: #fffbfa;
 $color-error-100: #fee4e2;
 $color-error-200: #fecdca;
 $color-error-300: #fda29b;
@@ -88,13 +89,19 @@ $color-error-500: #f04438;
 $color-error-600: #d92d20;
 $color-error-700: #b42318;
 
+$color-success-25: #f6fef9;
 $color-success-100: #d1fadf;
+$color-success-300: #75e0a7;
 $color-success-500: #12b76a;
 $color-success-600: #039855;
+$color-success-700: #067647;
 
 $color-sail-100: #fbf7f5;
 
+$color-warning-25: #fffcf5;
+$color-warning-300: #fec84b;
 $color-warning-600: #dc6803;
+$color-warning-700: #b54708;
 
 // Nowruz Box Shadows
 $Focus-rings-brand: 0px 0px 0px 4px rgba(51, 110, 107, 0.24);
