--- a/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
+++ b/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
@@ -23,6 +23,19 @@
     gap: 24px;
   }
 }
+
+.description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 32px;
+  @media (max-width: 640px) {
+    padding: 0px 16px;
+    gap: 24px;
+  }
+}
+
 .expandable span {
   font-size: 16px;
   font-weight: 400;
