--- a/src/Nowruz/modules/Jobs/modules/OrganizationJobListing/organization-job-listing.module.css
+++ b/src/Nowruz/modules/Jobs/modules/OrganizationJobListing/organization-job-listing.module.css
@@ -18,3 +18,11 @@
     }
   }
 }
+
+.loader {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
