added featured-icon component with the new design

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -32,6 +32,7 @@
   color_grey_blue_700: $color-grey-blue-700;
 
   color_error_25: $color-error-25;
+  color_error_50: $color-error-50;
   color_error_100: $color-error-100;
   color_error_200: $color-error-200;
   color_error_300: $color-error-300;
@@ -39,6 +40,7 @@
   color_error_600: $color-error-600;
   color_error_700: $color-error-700;
 
+  color_success_50: $color-success-50;
   color_success_100: $color-success-100;
   color_success_500: $color-success-500;
   color_success_600: $color-success-600;
@@ -47,6 +49,8 @@
   color_sail_100: $color-sail-100;
 
   color_warning_25: $color-warning-25;
+  color_warning_50: $color-warning-50;
+  color_warning_100: $color-warning-100;
   color_warning_300: $color-warning-300;
   color_warning_600: $color-warning-600;
   color_warning_700: $color-warning-700;
