--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -82,6 +82,7 @@ $color-grey-blue-600: #3e4784;
 $color-grey-blue-700: #363f72;
 
 $color-error-25: #fffbfa;
+$color-error-50: #fef3f2;
 $color-error-100: #fee4e2;
 $color-error-200: #fecdca;
 $color-error-300: #fda29b;
@@ -90,6 +91,7 @@ $color-error-600: #d92d20;
 $color-error-700: #b42318;
 
 $color-success-25: #f6fef9;
+$color-success-50: #ecfdf3;
 $color-success-100: #d1fadf;
 $color-success-300: #75e0a7;
 $color-success-500: #12b76a;
@@ -99,6 +101,8 @@ $color-success-700: #067647;
 $color-sail-100: #fbf7f5;
 
 $color-warning-25: #fffcf5;
+$color-warning-50: #fffaeb;
+$color-warning-100: #fef0c7;
 $color-warning-300: #fec84b;
 $color-warning-600: #dc6803;
 $color-warning-700: #b54708;
