--- a/src/Nowruz/modules/Jobs/jobCreate/components/JobPreviewModal/preview-modal.module.scss
+++ b/src/Nowruz/modules/Jobs/jobCreate/components/JobPreviewModal/preview-modal.module.scss
@@ -31,6 +31,8 @@
     border-bottom-right-radius: 0;
   }
   width: 960px;
+  max-height: 90%;
+  overflow-y: auto;
 }
 .body {
   @media screen and (max-width: 600px) {
