fixed bugs of accept offer

--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -54,4 +54,6 @@
   color_warning_300: $color-warning-300;
   color_warning_600: $color-warning-600;
   color_warning_700: $color-warning-700;
+
+  color_burgundy_600: $color-burgundy-600;
 }
