--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -107,6 +107,8 @@ $color-warning-300: #fec84b;
 $color-warning-600: #dc6803;
 $color-warning-700: #b54708;
 
+$color-burgundy-600: #b03046;
+
 // Nowruz Box Shadows
 $Focus-rings-brand: 0px 0px 0px 4px rgba(51, 110, 107, 0.24);
 $Focus-rings-brand-shadow-xs:
