--- a/src/Nowruz/pages/jobs/List/list.module.scss
+++ b/src/Nowruz/pages/jobs/List/list.module.scss
@@ -10,7 +10,7 @@
     padding-bottom: 20px;
     border-bottom: solid 1px $color-grey-200;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     @media (max-width: 640px) {
       flex-direction: column;
