Fiat payment flow

--- a/src/Nowruz/modules/general/components/modal/modal.module.scss
+++ b/src/Nowruz/modules/general/components/modal/modal.module.scss
@@ -4,9 +4,9 @@
     width: 640px;
     margin: auto;
     max-height: 90%;
+    height: fit-content;
     display: flex;
     align-items: center;
-    justify-content: center;
   }
 }
 
