chore: fix org offer

--- a/src/Nowruz/modules/Jobs/containers/OrgOfferModal/org-offer-modal.module.scss
+++ b/src/Nowruz/modules/Jobs/containers/OrgOfferModal/org-offer-modal.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2 !important;
   @media screen and (max-width: 600px) {
     flex-direction: column;
     justify-content: flex-end;
